--- a/index.html
+++ b/index.html
@@ -7,30 +7,151 @@
     <title>inicio</title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="productos.css">
+    <link rel="stylesheet" href="formulario.css">
+    <link rel="stylesheet" href="contacto.css">
 </head>
 
 <body>
     <header>
         <div class="container">
-            <img src="imagenes\Diseño sin título.zip - 1.png" alt="logo" width="300px"
-                height="100px">
+            <img src="imagenes\Diseño sin título.zip - 1.png" alt="logo" width="300px" height="100px">
             <nav>
                 <ul>
                     <li><a href="index.html">inicio</a></li>
-                    <li><a href="productos.html">productos</a></li>
-                    <li><a href="contacto.html">contacto</a></li>
+                    <li><a href="#productos">productos</a></li>
+                    <li><a href="#contacto">contacto</a></li>
                     <li><a href="formulario.html">iniciar sesion/registrarse</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-    <center>
-        <h1>bienvenido a YarcestaHOT</h1>
-        <p>aqui podras encontrar tus piezas soñadas y las mas cotizadas en el coleccionismo</p>
-        <img src="imagenes\Diseño sin título.zip - 1.png" alt="">
+    <br><br><br><br><br><br><b><br><br><br><br><br><br><br>
+        <center>
+            <h1>bienvenido a YarcestaHOT</h1>
+            <p>aqui podras encontrar tus piezas soñadas y las mas cotizadas en el coleccionismo</p>
+            <img src="imagenes\Diseño sin título.zip - 1.png" alt="">
+        </center>
+        <br><br><br><br><br><br><br><br><br>
+        <section id="productos">
+                <div class="container-items">
+                    <div class="item">
+                        <figure>
+                            <img src="imagenes\IMG_2339.JPG" alt="producto">
+                        </figure>
+                        <div class="info-product">
+                            <h2>Hot wheels basico</h2>
+                            <p class="price">$10.000</p>
+                            <button>añadir al carrito</button>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <figure>
+                            <img src="imagenes\IMG_2341.PNG" alt="producto">
+                        </figure>
+                        <div class="info-product">
+                            <h2>Hot wheels premium</h2>
+                            <p class="price">$40.000</p>
+                            <button>añadir al carrito</button>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <figure>
+                            <img src="imagenes\IMG_2342.PNG" alt="producto">
+                        </figure>
+                        <div class="info-product">
+                            <h2>Hot wheels elite</h2>
+                            <p class="price">$90.000</p>
+                            <button>añadir al carrito</button>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <figure>
+                            <img src="imagenes\IMG_2343.PNG" alt="producto">
+                        </figure>
+                        <div class="info-product">
+                            <h2>Hot wheels RLC</h2>
+                            <p class="price">$150.000</p>
+                            <button>añadir al carrito</button>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <figure>
+                            <img src="imagenes\IMG_2344.PNG" alt="producto">
+                        </figure>
+                        <div class="info-product">
+                            <h2>Hot wheels super treasure hunt</h2>
+                            <p class="price">$300.000</p>
+                            <button>añadir al carrito</button>
+                        </div>
+                    </div>
+                </div>
+                </header>
+            
+        </section>
+        <br><br><br><br><br><br><br><br>
+        <section id="contacto">
+            <div class="contact_form">
+
+                <div class="formulario">
+                    <h1>Formulario de contacto</h1>
+                    <h3>Escríbenos y en breve los pondremos en contacto contigo</h3>
 
 
-    </center>
+                    <form action="submeter-formulario.php" method="post">
+
+
+                        <p>
+                            <label for="nombre" class="colocar_nombre">Nombre
+                                <span class="obligatorio">*</span>
+                            </label>
+                            <input type="text" name="introducir_nombre" id="nombre" required="obligatorio"
+                                placeholder="Escribe tu nombre">
+                        </p>
+
+                        <p>
+                            <label for="email" class="colocar_email">Email
+                                <span class="obligatorio">*</span>
+                            </label>
+                            <input type="email" name="introducir_email" id="email" required="obligatorio"
+                                placeholder="Escribe tu Email">
+                        </p>
+
+                        <p>
+                            <label for="telefone" class="colocar_telefono">Teléfono
+                            </label>
+                            <input type="tel" name="introducir_telefono" id="telefono"
+                                placeholder="Escribe tu teléfono">
+                        </p>
+
+                        <p>
+                            <label for="asunto" class="colocar_asunto">Asunto
+                                <span class="obligatorio">*</span>
+                            </label>
+                            <input type="text" name="introducir_asunto" id="assunto" required="obligatorio"
+                                placeholder="Escribe un asunto">
+                        </p>
+
+                        <p>
+                            <label for="mensaje" class="colocar_mensaje">Mensaje
+                                <span class="obligatorio">*</span>
+                            </label>
+                            <textarea name="introducir_mensaje" class="texto_mensaje" id="mensaje"
+                                required="obligatorio" placeholder="Deja aquí tu comentario..."></textarea>
+                        </p>
+
+                        <button type="submit" name="enviar_formulario" id="enviar">
+                            <p>Enviar</p>
+                        </button>
+
+                        <p class="aviso">
+                            <span class="obligatorio"> * </span>los campos son obligatorios.
+                        </p>
+
+                    </form>
+                </div>
+            </div>
+        </section>
 
 
 </body>
